Fix spacing for avatar list.

--- a/src/app/components/comment/avatar-list/avatar-list.styl
+++ b/src/app/components/comment/avatar-list/avatar-list.styl
@@ -5,6 +5,7 @@
 
 	.btn
 		vertical-align: top
+		margin: 0 10px 10px 10px
 
 	&-item
 		display: inline-block
